--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a name="conjecturing-for-sage" class="anchor" href="#conjecturing-for-sage"><span class="octicon octicon-link"></span></a>Conjecturing for Sage</h3>
+        <h1>
+<a name="conjecturing-for-sage" class="anchor" href="#conjecturing-for-sage"><span class="octicon octicon-link"></span></a>Conjecturing for Sage</h1>
 
 <p>This repository contains the code described in the paper Automated Conjecture-making: Fajtlowicz's Dalmatian Heuristic Revisited.</p>
 
-<h3>
-<a name="quickstart" class="anchor" href="#quickstart"><span class="octicon octicon-link"></span></a>Quickstart</h3>
+<h2>
+<a name="quickstart" class="anchor" href="#quickstart"><span class="octicon octicon-link"></span></a>Quickstart</h2>
 
 <p>See the directory <code>spkg</code> for instructions on how to build and install a Sage package containing the expressions program.
 Once you have built and installed such a Sage package, you can use the Python files in the directory <code>sage</code> to interact
@@ -62,8 +62,8 @@ sage: conjecture(objects, invariants, 1)
 
 <p>Note that loading the file <code>numbertheory.py</code> sets the variable <code>invariants</code> to a list of invariants used in number theory.</p>
 
-<h3>
-<a name="layout-of-the-repository" class="anchor" href="#layout-of-the-repository"><span class="octicon octicon-link"></span></a>Layout of the repository</h3>
+<h2>
+<a name="layout-of-the-repository" class="anchor" href="#layout-of-the-repository"><span class="octicon octicon-link"></span></a>Layout of the repository</h2>
 
 <p>The repository contains four directory:</p>
 
@@ -76,14 +76,84 @@ sage: conjecture(objects, invariants, 1)
 <code>sage</code>: this directory contains the Python scripts which integrate the C program into Sage.</li>
 <li>
 <code>examples</code>: this directory contains several examples of how the code in this repository can be used.</li>
-</ul><h3>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h3>
+</ul><h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <h3>
-<a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h3>
+<a name="c-program" class="anchor" href="#c-program"><span class="octicon octicon-link"></span></a>C program</h3>
 
-<h3>
-<a name="tips" class="anchor" href="#tips"><span class="octicon octicon-link"></span></a>Tips</h3>
+<p>Building the C program is simple: just execute the command <code>make</code> in the directory <code>c</code>. This will build the program <code>expressions</code>. A detailed usage message for <code>expressions</code> can be obtained by executing the following command:</p>
+
+<pre><code>$ ./expressions -h
+</code></pre>
+
+<p>In the Sage code this program is used to generate the conjectures, but it can also be used to generate the intermediate structures.</p>
+
+<p>To generate rooted binary trees with a 0 binary nodes (i.e., with two children) and with 1 unary node (i.e., with one child), you can use the following command:</p>
+
+<pre><code>$ ./expressions -u 1 0
+Found 1 unlabeled trees.
+</code></pre>
+
+<p>To generate labeled rooted binary trees, you also have to specify the number of invariants (i.e., labels for the leaves):</p>
+
+<pre><code>$ ./expressions -l 1 0 2
+Found 1 unlabeled trees.
+Found 10 labeled trees.
+</code></pre>
+
+<p>To generate valid expressions, you need to input the values of invariants for all objects. Assume that the content of the file <code>values.txt</code> is this:</p>
+
+<pre><code>3 4 2
+3
+3
+2
+2
+5
+5
+2
+2
+5
+10
+4
+4
+</code></pre>
+
+<p>The first line tells us that there are 3 objects, 4 invariants and that the second invariant is the main invariant. This corresponds to the following situation:</p>
+
+<pre><code>           Invariant  1  Invariant  2  Invariant  3  Invariant  4
+ object 1)    3.000000      3.000000      2.000000      2.000000
+ object 2)    5.000000      5.000000      2.000000      2.000000
+ object 3)    5.000000     10.000000      4.000000      4.000000
+</code></pre>
+
+<p>Now you can generate all valid expressions with one unary operator as follows:</p>
+
+<pre><code>$ ./expressions -e 1 0 --all-operators --print-valid-expressions &lt; values.txt 
+I2 &lt;= (I1) * 2
+I2 &lt;= (I1) ^ 2
+Found 1 unlabeled trees.
+Found 30 labeled trees.
+Found 2 valid expressions.
+</code></pre>
+
+<p>Finally you can also generate conjectures using the same file:</p>
+
+<pre><code>$ ./expressions -c --all-operators --dalmatian &lt; values.txt 
+Generation process was stopped by the conjecturing heuristic.
+Found 5 unlabeled trees.
+Found 410 labeled trees.
+Found 53 valid expressions.
+I2 &lt;= (I1) * 2
+I2 &lt;= ((I1) / 2) * (I3)
+I2 &lt;= ((I3) ^ 2) + 1
+</code></pre>
+
+<h2>
+<a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h2>
+
+<h2>
+<a name="tips" class="anchor" href="#tips"><span class="octicon octicon-link"></span></a>Tips</h2>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nvcleemp">nvcleemp</a></p>
