Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@ I2 &lt;= ((I1) / 2) * (I3)
 I2 &lt;= ((I3) ^ 2) + 1
 </code></pre>
 
+<h3>
+<a name="making-the-sage-package" class="anchor" href="#making-the-sage-package"><span class="octicon octicon-link"></span></a>Making the Sage Package</h3>
+
+<p>To make the Sage Package, simply go to the directory <code>spkg</code> and use the following command:</p>
+
+<pre><code>$ make conjecturing-YYYYMMDD
+</code></pre>
+
+<p>Replace YYYYMMDD by the year, the month and the day respectively. You can then install this newly created package by issueing the following command:</p>
+
+<pre><code>$ sage -f conjecturing-YYYYMMDD.spkg
+</code></pre>
+
+<p>Depending on the location where Sage is installed, you might need to add <code>sudo</code> at the beginning of that command.</p>
+
+<h3>
+<a name="making-conjectures-in-sage" class="anchor" href="#making-conjectures-in-sage"><span class="octicon octicon-link"></span></a>Making conjectures in Sage</h3>
+
 <h2>
 <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h2>
 
