Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I2 &lt;= ((I3) ^ 2) + 1
 
 <p>You do not need to make the Sage Package. You can simply install the one we are providing. If you however want to make the Sage Package yourself, simply go to the directory <code>spkg</code> and use the following command:</p>
 
-<pre><code>$ make conjecturing-YYYYMMDD
+<pre><code>$ make conjecturing-YYYYMMDD.spkg
 </code></pre>
 
 <p>Replace <code>YYYYMMDD</code> by the year, the month and the day respectively. You can then install this newly created package by issueing the following command:</p>
