Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@ sage: conjectures
 </code></pre>
 
 <p>Note that this will take quite long to verify these two conjectures for all values it checks.</p>
+
+<h2>
+<a name="conjecturing-on-the-sagemath-cloud-" class="anchor" href="#conjecturing-on-the-sagemath-cloud-"><span class="octicon octicon-link"></span></a>Conjecturing on The Sagemath Cloud ™</h2>
+
+<p>One easy way to work with Sage is by going to <a href="http://cloud.sagemath.com">http://cloud.sagemath.com</a>. </p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nvcleemp">nvcleemp</a></p>
