Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ sage: conjectures
 </code></pre>
 
 <ul>
-<li>Restart the Sage Worksheet Server. Go the your project settings and under <strong>Restart</strong> click the button for Sage Worksheet Server.</li>
+<li>Restart the Sage Worksheet Server. Go to project settings for your project and under <strong>Restart</strong> click the button for Sage Worksheet Server.</li>
 <li>You are done. You can now start conjecturing using a Terminal or a Sage Worksheet. You can just follow the instructions above.</li>
 </ul>
       </section>
