--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
           <li><a href="https://github.com/nvcleemp/conjecturing/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/nvcleemp/conjecturing">View On <strong>GitHub</strong></a></li>
         </ul>
+
+        <p></p>
+
+        <p class="view"><a href="#quickstart">Quickstart</a></p>
+        <p class="view"><a href="#layout-of-the-repository">Layout of the repository</a></p>
+        <p class="view"><a href="#usage">Usage</a></p>
+        <p class="view"><a href="#conjecturing-on-the-sagemath-cloud-">Conjecturing on The Sagemath Cloud ™</a></p>
       </header>
       <section>
         <h1>
