--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
         <p></p>
 
-        <p class="view"><a href="#quickstart">Quickstart</a></p>
-        <p class="view"><a href="#layout-of-the-repository">Layout of the repository</a></p>
-        <p class="view"><a href="#usage">Usage</a></p>
-        <p class="view"><a href="#conjecturing-on-the-sagemath-cloud-">Conjecturing on The Sagemath Cloud ™</a></p>
+        <p class="view" style="margin-bottom: 0px"><a href="#quickstart">Quickstart</a></p>
+        <p class="view" style="margin-bottom: 0px"><a href="#layout-of-the-repository">Layout of the repository</a></p>
+        <p class="view" style="margin-bottom: 0px"><a href="#usage">Usage</a></p>
+        <p class="view" style="margin-bottom: 0px"><a href="#conjecturing-on-the-sagemath-cloud-">Conjecturing on The Sagemath Cloud ™</a></p>
       </header>
       <section>
         <h1>
