--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <p class="view" style="margin-bottom: 0px"><a href="#quickstart">Quickstart</a></p>
         <p class="view" style="margin-bottom: 0px"><a href="#layout-of-the-repository">Layout of the repository</a></p>
         <p class="view" style="margin-bottom: 0px"><a href="#usage">Usage</a></p>
+        <p class="view" style="margin-bottom: 0px; margin-right: 10px"><a href="#c-program">C program</a></p>
+        <p class="view" style="margin-bottom: 0px; margin-right: 10px"><a href="#making-the-sage-package">Making the Sage Package</a></p>
+        <p class="view" style="margin-bottom: 0px; margin-right: 10px"><a href="#making-conjectures-in-sage">Making conjectures in Sage</a></p>
+        <p class="view" style="margin-bottom: 0px; margin-right: 10px"><a href="#running-the-examples">Running the examples</a></p>
         <p class="view" style="margin-bottom: 0px"><a href="#conjecturing-on-the-sagemath-cloud-">Conjecturing on The Sagemath Cloud ™</a></p>
       </header>
       <section>
