--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
           <li><a href="https://github.com/nvcleemp/conjecturing/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/nvcleemp/conjecturing">View On <strong>GitHub</strong></a></li>
         </ul>
+        
+         <p></p>
+         
+          <p class="view" style="margin-bottom: 0px"><a href="#quickstart">Quickstart</a></p>
+          <p class="view" style="margin-bottom: 0px"><a href="#layout-of-the-repository">Layout of the repository</a></p>
+          <p class="view" style="margin-bottom: 0px"><a href="#usage">Usage</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#c-program">C program</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#making-the-sage-package">Making the Sage Package</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#making-conjectures-in-sage">Making conjectures in Sage</a></p>
+          <p class="view" style="margin-bottom: 0px; margin-left: 10px"><a href="#running-the-examples">Running the examples</a></p>
+          <p class="view" style="margin-bottom: 0px"><a href="#conjecturing-on-the-sagemath-cloud-">Conjecturing on SageMathCloud ™</a></p>
+
       </header>
       <section>
         <h1>
