Updated the information on the paper

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>
 <a id="conjecturing-for-sage" class="anchor" href="#conjecturing-for-sage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conjecturing for Sage</h1>
 
-<p>This repository contains the code described in the paper Automated Conjecture-making: Fajtlowicz's Dalmatian Heuristic Revisited.</p>
+<p>This repository contains the code described in the paper C. E. Larson and N. Van Cleemput, <a href="http://www.sciencedirect.com/science/article/pii/S0004370215001575">Automated Conjecturing I: Fajtlowicz's Dalmatian Heuristic Revisited</a>, Artificial Intelligence 231 (2016) 17-38.</p>
 
 <h2>
 <a id="quickstart" class="anchor" href="#quickstart" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quickstart</h2>
