Modified download information

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/nvcleemp/conjecturing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nvcleemp/conjecturing/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/nvcleemp/conjecturing/archive/0.11.0.tar.gz">Download <strong>0.11.0</strong></a></li>
+          <li><a href="https://github.com/nvcleemp/conjecturing/archive/0.11.0-SMC.zip">Download <strong>0.11.0-SMC</strong></a></li>
           <li><a href="https://github.com/nvcleemp/conjecturing">View On <strong>GitHub</strong></a></li>
         </ul>
 
