Extended information about docstrings

--- a/index.html
+++ b/index.html
@@ -218,10 +218,15 @@ sage: propertyBasedConjecture(objects, properties, 0)
 [(~(is_even))-&gt;(is_prime)]
 </code></pre>
 
-<p>The methods provide more detailed information. You can access this by running the following commands:</p>
+<p>The methods provide more detailed information together with several examples. You can access this information by running the following commands:</p>
 
 <pre><code>sage: help(conjecture)
 sage: help(propertyBasedConjecture)</code></pre>
+
+<p>or</p>
+
+<pre><code>sage: conjecture?
+sage: propertyBasedConjecture?</code></pre>
 
 <h3>
 <a id="running-the-examples" class="anchor" href="#running-the-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Running the examples</h3>
